# dark-factory

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bz-service.yaml  docker-compose.dev.yaml  pyproject.toml  requirements-dev.txt  requirements-service.txt  requirements.txt
.github/workflows/: ci.yml  deploy-staging.yml
attractor/: README.md
dark_factory/: __init__.py
dark_factory/attractor/: __init__.py  convergence.py  models.py  router.py  task_entropy.py
dark_factory/dtu_controller/: __init__.py  models.py  orchestrator.py  router.py
dark_factory/judge/: backends.py  models.py  router.py
dark_factory/scenario_executor/: __init__.py  executor.py  models.py  router.py
dark_factory/service/: api.py
dark_factory/spec_engine/: __init__.py  compiler.py  models.py  router.py  validator.py
dtu_controller/: README.md
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  network-policy.yaml  service.yaml
k8s/overlays/bz-staging/: kustomization.yaml
scenario_executor/: README.md
spec_engine/: README.md
tests/: conftest.py  test_attractor.py  test_dtu_controller.py  test_health.py  test_judge_evaluate.py  test_scenario_executor.py  test_spec_engine.py
